--- a/frontend/src/modules/program_module/components/styles/clientInfo.module.css
+++ b/frontend/src/modules/program_module/components/styles/clientInfo.module.css
@@ -25,10 +25,6 @@
   margin-top: 1rem;
   width: 100%;
   height: 100%;
-  /* display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  gap: 1rem; */
 }
 
 
@@ -42,7 +38,6 @@
   grid-template-columns: 1.3fr repeat(5, 1fr);
   padding: .5rem 1rem;
   align-items: center;
-  cursor: pointer;
 }
 
 .clientFullName {
@@ -50,6 +45,7 @@
   display: flex;
   align-items: center;
   gap: 1.3rem;
+  font-size: 0.8rem;
 }
 
 .clientitemData {
