--- a/frontend/src/modules/program_module/components/styles/hotelsList.module.css
+++ b/frontend/src/modules/program_module/components/styles/hotelsList.module.css
@@ -23,7 +23,7 @@
   border-radius: 24px;
   min-height: 6rem;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   align-items: center;
   gap: 1rem;
 
@@ -37,6 +37,8 @@
   text-align: center;
 }
 
+
+
 .hotelItemData > p {
   color: #91929E;
   margin-bottom: .4rem;
@@ -44,4 +46,14 @@
 
 .allHotelsList {
   margin-top: 2rem;
+}
+
+.hotelItemData__volumes {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.numberInfo > p {
+  color: #91929E;
 }
