--- a/frontend/src/ui/profile_inputs/profile_input.module.css
+++ b/frontend/src/ui/profile_inputs/profile_input.module.css
@@ -9,7 +9,7 @@
 
 .inputField {
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid #D8E0F0;
   border-radius: 1rem;
   padding: .8rem 1.2rem;
 }
