--- a/frontend/src/modules/client_module/components/client_program/styles/current_program.module.css
+++ b/frontend/src/modules/client_module/components/client_program/styles/current_program.module.css
@@ -1,3 +1,7 @@
+.currentClientProgram {
+  width: 100%;
+}
+
 .clientProgramInfo {
   width: 100%;
   margin-top: 1rem;
@@ -14,9 +18,13 @@
 }
 
 .programInfoDesc {
+  width: 100%;
   margin-top: 1rem;
-  min-height: 8rem;
+  min-height: 12rem;
   background-color: #fff;
   border-radius: 24px;
   padding: 1rem 1.3rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: start;
 }
