--- a/frontend/src/modules/client_module/components/ui/styles/clientprogramdetails.module.css
+++ b/frontend/src/modules/client_module/components/ui/styles/clientprogramdetails.module.css
@@ -19,3 +19,10 @@
 .programDate > p {
   color: #7D8592;
 }
+
+.contractData {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
