создание отелей и номеров, поправил программу, далее добавление отеля в программу

--- a/frontend/src/modules/hotels_module/components/hotels.module.css
+++ b/frontend/src/modules/hotels_module/components/hotels.module.css
@@ -23,6 +23,13 @@
   text-align: center;
 }
 
+.itemMenu img {
+  transition: transform .3s ease;
+}
+
+.itemMenu img:active {
+  transform: scale(0.8);
+}
 
 .hotelCardList {
   width: 100%;
