--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -119,11 +119,9 @@ button, input[type="submit"] {
   box-shadow: none;
   background-color: transparent;
   cursor: pointer;
-  transition: background-color .5s ease;
   padding: 0.2rem;
-  /* border: solid black 1px; */
   border-radius: 14px;
-  transition: .4s;
+  transition: transform .4s;
   transform: all .4s ease;
   color: #fff;
 }
@@ -135,9 +133,10 @@ button {
 button:hover {
   background-color: #3A81EB;
   border: none;
-  /* padding: 0.7rem 3rem; */
-  /* padding: .2rem; */
+}
 
+button:active {
+  transform: scale(0.9);
 }
 
 button::-moz-focus-inner {
