получение и редактирование отелей, далее редактирование номеров

--- a/frontend/src/modules/hotels_module/components/hotel_profile/styles/hotel_profile_data.module.css
+++ b/frontend/src/modules/hotels_module/components/hotel_profile/styles/hotel_profile_data.module.css
@@ -16,6 +16,7 @@
   margin-top: 1.4rem;
   min-height: 7rem;
   border-bottom: 1px solid #E4E6E8;
+  text-align: center;
 }
 
 .hotelDataHeader > h5 {
