--- a/frontend/src/modules/hotels_module/components/hotels.module.css
+++ b/frontend/src/modules/hotels_module/components/hotels.module.css
@@ -56,7 +56,9 @@
   justify-content: center;
   background-color: #F4F9FD;
   height: 60%;
+  padding: 0 1rem;
   border-radius: 2rem;
+  cursor: pointer;
 }
 
 .hotelCardContent {
