создание расходов программы

--- a/frontend/src/modules/program_module/components/styles/programData.module.css
+++ b/frontend/src/modules/program_module/components/styles/programData.module.css
@@ -54,6 +54,8 @@
 
 
 
-/* .programItemData {
-  
-} */
+.programItemData {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
