--- a/frontend/src/modules/company_module/styles/company_main.module.css
+++ b/frontend/src/modules/company_module/styles/company_main.module.css
@@ -3,15 +3,19 @@
   height: 100%;
 }
 
+.companyName {
+  width: 100%;
+}
+
 .companyContainer {
   display: flex;
-  align-items: center;
   width: 100%;
   height: 100%;
+  gap: 1.3rem;
 }
 
 .companyData {
-  width: 100%;
+  width: 70%;
 }
 
 .staffTitle {
@@ -28,7 +32,7 @@
 .staffBlock {
   margin-top: 2rem;
   display: block;
-  width: 75%;
+  width: 100%;
   min-width: 75%;
   min-height: 40%;
   background-color: #fff;
@@ -71,9 +75,15 @@
 .programsBlock {
   margin-top: 2rem;
   display: block;
-  width: 75%;
-  min-width: 75%;
+  width: 100%;
   min-height: 40%;
+}
+
+.programTitle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.3rem;
 }
 
 .programList {
@@ -84,10 +94,33 @@
   width: 100%;
   background-color: #fff;
   margin: 1rem 0;
-  min-height: 4rem;
+  /* min-height: 12rem; */
   border-radius: 24px;
 }
 
 .programContent {
   padding: 2rem 1rem;
+  /* display: flex;
+  align-items: center;
+  justify-content: space-between; */
+}
+
+.usersData {
+  margin-top: 2rem;
+  width: 30%;
+}
+
+.usersBlock {
+  padding: 1.3rem;
+  background-color: #fff;
+  border-radius: 24px;
+  width: 100%;
+  min-height: 20rem;
+  margin-bottom: 2rem;
+}
+
+.usersHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
