--- a/frontend/src/modules/page_menu_section/main_menu.module.css
+++ b/frontend/src/modules/page_menu_section/main_menu.module.css
@@ -9,6 +9,7 @@
   min-width: 18%;
   width: 17%;
   min-height: 70rem;
+  height: 70rem;
   border-radius: 24px;
   text-transform: uppercase;
   font-weight: 600;
