создание сотрудников, далее создание затрат

--- a/frontend/src/modules/company_module/styles/company_main.module.css
+++ b/frontend/src/modules/company_module/styles/company_main.module.css
@@ -124,3 +124,13 @@
   align-items: center;
   justify-content: space-between;
 }
+
+
+.expenseItem {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  margin-bottom: 1rem;
+  gap: 2rem;
+}
