--- a/frontend/src/ui/create_staff/create_staff.module.css
+++ b/frontend/src/ui/create_staff/create_staff.module.css
@@ -51,3 +51,14 @@
 .staffExpenseItem > h6 {
   text-align: center;
 }
+
+.createItemData {
+  margin-bottom: 3rem;
+}
+.createItemBlock {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+  margin-top: 1rem;
+}
