append hotels to program

--- a/frontend/src/modules/program_module/components/styles/hotels_expenses.module.css
+++ b/frontend/src/modules/program_module/components/styles/hotels_expenses.module.css
@@ -1,16 +1,14 @@
-.createProgram {
+.createDataProgram {
   width: 100%;
-  background-color: #fff;
   border-radius: 24px;
   display: flex;
-  /* align-items: center; */
   justify-content: center;
-  padding: 2rem 1rem;
+  padding: 1rem;
 }
 
 .createProgramData {
   position: relative;
-  width: 80%;
+  width: 90%;
   display: block;
 }
 
@@ -18,19 +16,12 @@
   width: 100%;
   text-align: start;
   background-color: #fff;
+  padding: 0 2rem;
+  border-radius: 24px;
+  padding-top: 1rem;
 }
+
 .sectionCreateData {
-  margin-top: 2rem;
-}
-
-.createdField {
-  margin-top: 2rem;
-}
-
-.programDates {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  gap: 2rem;
   margin-top: 2rem;
 }
 
@@ -44,24 +35,13 @@
   display: flex;
   align-items: 'center';
   gap: 5rem;
-}
-
-
-.expenseItemHeader {
-  display: grid;
-  grid-template-columns: 2fr repeat(4, 1fr);
-  gap: 2rem;
-  align-items: center;
-  text-align: center;
+  padding: 0 2rem;
 }
 
 .dataHeader {
   margin-bottom: 2rem;
 }
 
-.staticExpenseBlock {
-  margin-top: 2rem;
-}
 
 .hotelList {
   display: block;
