добавление отелей, остановился на добавлении расходов

--- a/frontend/src/modules/program_module/components/styles/hotels_expenses.module.css
+++ b/frontend/src/modules/program_module/components/styles/hotels_expenses.module.css
@@ -25,6 +25,12 @@
   margin-top: 2rem;
 }
 
+.sectionAppendHotels {
+  width: 100%;
+  height: 50vh;
+  overflow: scroll;
+}
+
 .saveBtn {
   position: absolute;
   margin-top: 2rem;
