--- a/frontend/src/modules/program_module/components/styles/hotelRooms.module.css
+++ b/frontend/src/modules/program_module/components/styles/hotelRooms.module.css
@@ -12,9 +12,12 @@
 .roomItem {
   margin-left: 3rem;
   display: grid;
-  grid-template-columns: 10% 2fr 10% 1fr 1fr;
+  grid-template-columns: 10% 2fr 10% 1fr;
   gap: 2rem;
   margin-bottom: 1rem;
   text-align: center;
 }
 
+.roomItem > input {
+  cursor: pointer;
+}
