создание партнера на фронте, остановился на выводе списка партнеров, затем сделать переход в профиль партнера

--- a/frontend/src/modules/partner_module/styles/create_partner.module.css
+++ b/frontend/src/modules/partner_module/styles/create_partner.module.css
@@ -26,3 +26,19 @@
   margin-top: 2rem;
   right: 0;
 }
+
+.partnerServicesBlock {
+  width: 100%;
+}
+
+.serviceItem {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  align-items: center;
+}
+
+.fieldItem {
+  margin-bottom: 1.4rem;
+}
