страница профиля клиента на фронте и беке

--- a/frontend/src/modules/client_module/components/client_profile/styles/client_profile_data.module.css
+++ b/frontend/src/modules/client_module/components/client_profile/styles/client_profile_data.module.css
@@ -37,3 +37,9 @@
   margin-top: 1.5rem;
   width: 100%;
 }
+
+.community {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
