--- a/frontend/src/modules/partner_module/styles/partner_partials.module.css
+++ b/frontend/src/modules/partner_module/styles/partner_partials.module.css
@@ -10,9 +10,13 @@
   border-radius: 24px;
   padding: 1rem 2rem;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 55% 45%;
   justify-content: space-between;
   margin-bottom: 2rem;
+}
+
+.partnerMainData {
+  width: 100%;
 }
 
 .partnerTitle {
@@ -21,4 +25,23 @@
 
 .partnerContent {
   text-align: center;
+}
+
+.partnerServicesList {
+  /* display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center; */
+}
+
+.partnerServiceHeader {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+.partnerServiceItem {
+  margin-top: .8rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
 }
