--- a/frontend/src/modules/client_module/components/ui/styles/clientprogramdetails.module.css
+++ b/frontend/src/modules/client_module/components/ui/styles/clientprogramdetails.module.css
@@ -1,11 +1,20 @@
-.programName {
-  text-align: center;
+
+.clientCurrentProgram {
+  width: 100%;
+  /* border-right: 1px solid #E4E6E8; */
+  padding: 1rem;
 }
 
-.programData {
+
+.clientProgramdDates {
   width: 100%;
-  border-right: 1px solid #E4E6E8;
-  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.programName {
+  text-align: center;
 }
 
 
