--- a/frontend/src/modules/program_module/components/styles/program_hotels.module.css
+++ b/frontend/src/modules/program_module/components/styles/program_hotels.module.css
@@ -14,4 +14,13 @@
   width: 3rem;
 }
 
-.hotelTitle {}
+.serviceData {
+  display: grid;
+  grid-template-columns: 1fr repeat(2, 2fr);
+  align-items: center;
+  background-color: #fff;
+  padding: 1rem 2rem;
+  border-radius: 24px;
+  min-height: 4rem;
+  cursor: pointer;
+}
