client program hotel front

--- a/frontend/src/modules/partner_module/styles/create_partner.module.css
+++ b/frontend/src/modules/partner_module/styles/create_partner.module.css
@@ -34,7 +34,7 @@
 .serviceItem {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr) 30%;
   gap: 2rem;
   align-items: center;
 }
