--- a/frontend/src/modules/program_module/components/styles/create_program.module.css
+++ b/frontend/src/modules/program_module/components/styles/create_program.module.css
@@ -29,7 +29,7 @@
 
 .programDates {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   margin-top: 2rem;
 }
