--- a/frontend/src/modules/client_module/components/client_program/styles/program_hotels.module.css
+++ b/frontend/src/modules/client_module/components/client_program/styles/program_hotels.module.css
@@ -17,7 +17,7 @@
   justify-content: center;
 }
 
-.programInfoDesc {
+.programHotelDesc {
   width: 100%;
   margin-top: 1rem;
   min-height: 8rem;
