--- a/frontend/src/modules/client_module/components/ui/styles/clientprofiledetailes.module.css
+++ b/frontend/src/modules/client_module/components/ui/styles/clientprofiledetailes.module.css
@@ -7,7 +7,14 @@
   text-align: center;
 }
 
-.clientPayments {
+.programContract {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+/* .clientPayments {
   margin-top: 1rem;
 }
 
@@ -22,4 +29,4 @@
 
 .clientProgramPrice {
   margin-top: 1rem;
-}
+} */
