--- a/frontend/src/ui/profile_inputs/create_item.module.css
+++ b/frontend/src/ui/profile_inputs/create_item.module.css
@@ -1,7 +1,7 @@
 
-.createField > h5 {
-  /* margin-bottom: 1.3rem; */
-}
+/* .createField > h5 {
+  margin-bottom: 1.3rem;
+} */
 
 .inputField {
   width: 100%;
